--- a/biologia.html
+++ b/biologia.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="header-placeholder"></div>
    <main id="biologia">
     <h1>Biología</h1>
     <h2>¿Qué es la Biología</h2>
@@ -19,6 +20,14 @@
 
 
    </main>
+   <script>
+    // Cargar el contenido del header
+    fetch('header.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('header-placeholder').innerHTML = data;
+        });
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
