--- a/biologia.html
+++ b/biologia.html
@@ -8,9 +8,9 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header-placeholder"></div>
-   <main id="biologia">
-    <h1>Biología</h1>
+    <header><div id="header-placeholder" role="banner"></div></header>
+   <main class="main-content container m-2">
+    <h1 id="blg">Biología</h1>
     <h2>¿Qué es la Biología</h2>
     <p>La biología es la ciencia que estudia la vida.<br>
     En esta sección vamos a estudiar esta materia juntos.</p>
